--- a/style.css
+++ b/style.css
@@ -23,3 +23,7 @@ h1 {
     border-bottom: 3px solid lightgrey;
     border-left: 3px solid lightgrey;
 }
+
+.colored {
+    background-color: black;
+}
