--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 }
 
 h1 {
+    font-family: "consolas", monospace;
+    font-size: 2.4em;
     text-align: center;
 }
 
@@ -26,4 +28,31 @@ h1 {
 
 .colored {
     background-color: black;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    margin-top: 20px;
+    
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    padding: 13px 23px;
+    border: 1px solid #222222;
+    transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+    background: #fff;
+    color: #222222;
+}
+
+button:hover {
+    border-color: #000000;
+    background: #f7f7f7;
 }
